--- a/src/Style/Main.css
+++ b/src/Style/Main.css
@@ -63,13 +63,14 @@ h2{
     overflow: hidden; /* Allow the card wrapper to overflow when it's shifted */
     background-color: aquamarine;
     padding-top: 1%;
-    padding-bottom: 2%;
+    padding-bottom: 5%;
 }
 
 .card-wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: rgb(31, 41, 227);
     width: 100%; /* Ensure it takes up full width */
     transition: transform 0.5s ease; /* Smooth transition */
 }
